--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,11 +62,20 @@ footer {
 }
 
 .column{
-	width:49%;
+	width:50%;
+	//margin-right:.5%;
+	min-height:300px;
+	background:#fff;
+	float:left;
+	border:1px dashed #ddd;
+}
+.column-full-width{
+	width:100%;
 	margin-right:.5%;
 	min-height:300px;
 	background:#fff;
 	float:left;
+	border:1px dashed #ddd;
 }
 .dragbox{
 	margin:5px 2px 2px 20px;
@@ -76,11 +85,8 @@ footer {
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 }
-.column  .placeholder{
+.placeholder{
 	background: #f0f0f0;
-	border:1px dashed #ddd;
-}
-.column {
 	border:1px dashed #ddd;
 }
 
@@ -114,4 +120,9 @@ button.close {
     position: absolute;
     top: -0.5em;
     left: -0.5em;
+}
+
+.hidden-div{
+	//display: none;
+	//background: rgba(0, 0, 0, 0.15);
 }
