--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -122,7 +122,7 @@ button.close {
     left: -0.5em;
 }
 
-.hidden-div{
-	//display: none;
-	//background: rgba(0, 0, 0, 0.15);
-}
+.popover-content {
+  height: 200px;
+  overflow-y: auto;
+ }
