--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,18 +1,7 @@
 
 <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>         
 
-<!-- <img src="" class="dynamic_image"
-     data-src="roses_ba5tmk" 
-     data-width="115" data-height="135"
-     data-crop="thumb" data-gravity="faces" data-radius="20"/> -->
 
-<style type="text/css">
-.popover-content {
-  height: 200px;
-  overflow-y: auto;
- }
-
-</style>
 <div class="container">
 
 
@@ -20,22 +9,15 @@
   	<div class="col-xs-6 col-md-4">
   		<div class="btn-toolbar">
 	  		<div class="btn-group">
-	       	<button class="btn draggable" id="picture-btn" data-original-title="Creativity Tuts" 
+	       	<button class="btn" id="picture-btn" data-original-title="Creativity Tuts" 
    data-placement="bottom" rel="popover"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
-	       		<!-- <div>
-				      <%= render "pictures" %>				    
-				    </div> -->
-
+	     
 	       	</button>
 	      	<button class="btn draggable" id="video-btn"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></button>
 	      	<button class="btn draggable" id="text-btn"><i class="fa fa-font fa-2x" aria-hidden="true"></i></button>
 	      	<button class="btn" id="save"> Save </button>
 
 	  		</div>
-	  		 <div class="dialog" style="display:none"  id="pictures" >
-					  <%= render "pictures" %>
-					  
-					</div>
 	  		
 			</div>
   	</div>
@@ -64,7 +46,7 @@
 	       	item["markdown"] = $(this).text();
 	      } else if (item["type"] == "video") {
 	       	//var text = $(this).text();
-	       	item["url"] = $(this).text() || $(this).find('iframe').attr("src") //"https://www.youtube.com/embed/0nCOZyoeA14"//$(this).text();
+	       	item["url"] = $(this).find('iframe').attr("src") //"https://www.youtube.com/embed/0nCOZyoeA14"//$(this).text();
 	      } else if (item["type"] == "picture") {
 	      	item["public_id"] = $(this).find('img').data("public");
 	      }
@@ -80,6 +62,7 @@
 	      dataType: 'script',
 	      success: function(msg) {
 	      	console.log("success")
+	      	//NOT WORKING
 	      }
 	           
 	    });
@@ -95,20 +78,14 @@
        initializeSortable();
        $(this).focus(); 
    });
-    //$('#example').popover({trigger: "click", html:true});
 });
 	$(document).ready(function() {
 		//$.cloudinary.config({ cloud_name: 'dg1a2dx9d', api_key: '643398365774925'})
 
 		//$(".dragbox > img").cloudinary();
 
-		pageLoad();
-		initializeSortable();
-		// setClickableTooltip(
-  //       '#picture',
-  //       'diff content with <a href="http://abbysdoor.com">link</a> :)'
-  //   );
-	
+		initializeEditable();
+		initializeSortable();	
 	});
 
 
@@ -130,13 +107,6 @@ $(".dragbox").hover(
 // $('button.close').click(function (e) {
 // 	$(this).parent().remove();
 // });
-$('#picture').mouseenter(function(){
-  var pos = $(this).position();
-  $(this).find('div').css('top', (pos.top)+50 + 'px').fadeIn();
-}).mouseleave(function(){
-  $(this).find('div').fadeOut();
-});
-
 
 </script>
 
