--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -9,13 +9,15 @@
   	<div class="col-xs-6 col-md-4">
   		<div class="btn-toolbar">
 	  		<div class="btn-group">
-	       	<button class="btn" id="picture-btn" data-original-title="Creativity Tuts" 
+	       	<button class="btn" id="picture-btn" data-original-title="Drag picture" 
    data-placement="bottom" rel="popover"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
 	     
 	       	</button>
 	      	<button class="btn draggable" id="video-btn"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></button>
 	      	<button class="btn draggable" id="text-btn"><i class="fa fa-font fa-2x" aria-hidden="true"></i></button>
+	      	<button class="btn" id="add-page" data-toggle="modal" data-target="#newPageDialog"> Add page </button>
 	      	<button class="btn" id="save"> Save </button>
+	      	
 
 	  		</div>
 	  		
@@ -27,7 +29,25 @@
 
 	</div>
 
-
+<div class="modal fade" id="newPageDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="exampleModalLabel">New Page</h4>
+        </div>
+        <div class="modal-body">
+          <%= render "form" %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <script type="text/javascript" >
   
   function updateWidgetData(){  
@@ -37,18 +57,25 @@
 	    $('.dragbox', this).each(function(i){
   
 	      var item={  
-	        id: $(this).data('id'),   
+	        id : $(this).data('id'),   
 	        order : i,  
-	        type: $(this).data('type'),
-	        div_id: columnId  
+	        type : $(this).data('type'),
+	        div_id : columnId  
 	      }; 
 	      if (item["type"] == "markdown_text") {
 	       	item["markdown"] = $(this).text();
 	      } else if (item["type"] == "video") {
 	       	//var text = $(this).text();
 	       	item["url"] = $(this).find('iframe').attr("src") //"https://www.youtube.com/embed/0nCOZyoeA14"//$(this).text();
-	      } else if (item["type"] == "picture") {
-	      	item["public_id"] = $(this).find('img').data("public");
+	      } else if (item["type"] == "picture_role") {
+	      	//item["public_id"] = $(this).find('img').data("public");
+	      	var pictureItem = {
+	      		url : $(this).find('img').attr("src"),
+	      		public_id : $(this).find('img').data("public"),
+	      		id : $(this).find('img').data("id")
+	      		//item["public_id"] = $(this).find('img').data("public")
+	      	}
+	      	item["picture_attributes"] = pictureItem
 	      }
 	      items.push(item);  
 	    });  
@@ -107,7 +134,6 @@ $(".dragbox").hover(
 // $('button.close').click(function (e) {
 // 	$(this).parent().remove();
 // });
-
 </script>
 
 
