--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -16,5 +16,5 @@
 </p>
  -->
 
-<%= link_to 'Edit', edit_site_path(@site) %> |
-<%= link_to 'Back', sites_path %>
+<%= link_to 'Edit', edit_user_site_path(@site.user_id, @site) %> |
+<%= link_to 'Back', user_sites_path %>
