--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@site, @page_new]) do |f| %>
+<%= form_for([@user, @site, @page_new]) do |f| %>
   <%= f.hidden_field :site_id, :value => @site.id %>
   <div class="field">
     <%= f.label :title %><br>
