--- a/app/views/menu/_horizontal.html.erb
+++ b/app/views/menu/_horizontal.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <p class="navbar-brand"><%= @site.title %></a>
+      <p class="navbar-brand"><%= @site.title %></p>
     </div>
     <ul class="nav navbar-nav">
     	<% @site.pages.each do |page| %>
