--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -20,7 +20,11 @@
         <td><%= site.title %></td>
         <td><%= link_to 'Show', site %></td>
         <td><%= link_to 'Edit', edit_site_page_path(site, site.first_page) %></td>
-        <td><%= link_to 'Destroy', site, method: :delete %></td>
+        <td>
+          <% if can? :destroy, site %>
+            <%= link_to 'Destroy', site, method: :delete %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
