--- a/app/views/menu/_horizontal.html.erb
+++ b/app/views/menu/_horizontal.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <p class="navbar-brand"><%= @site.title %></a>
+      <p class="navbar-brand"><img src="http://res.cloudinary.com/candidbusiness/image/upload/v1455406304/dispute-bills-chicago.png" alt=""></p>
     </div>
     <ul class="nav navbar-nav">
     	<% @site.pages.each do |page| %>
@@ -10,3 +10,84 @@
     </ul>
   </div>
 </nav>
+ -->
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+       <a class="navbar-brand" href="" style="padding: 0px;"><img  style="height: 100%; padding: 2px; width: auto;" src="<%= @site.picture.url %>" alt="Dispute Bills">
+        <p><%= @site.title %></p>
+        </a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <% @site.pages.each do |page| %>
+          <li><a href="#"><%= page.title %></a></li>
+       <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- <nav class="navbar navbar-default">
+        <div class="container-fluid"> 
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="http://disputebills.com"><img src="http://placehold.it/150x50&text=Logo" alt="Dispute Bills">
+        </a>
+      </div>           
+     
+            <div class="nav-collapse collapse">
+               <ul class="nav navbar-nav">
+                  <% @site.pages.each do |page| %>
+                  <li><a href="#"><%= page.title %></a></li>
+                   <% end %>
+                </ul>            
+              </div>
+        </div>
+    </nav>
+ -->
+<!-- 
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="http://disputebills.com"><img src="http://res.cloudinary.com/candidbusiness/image/upload/v1455406304/dispute-bills-chicago.png" alt="Dispute Bills">
+        </a>
+      </div>
+      <div id="navbar1" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </nav> -->
