--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to (I18n.t :createsite), new_site_path %></li>
       <li>
-        <%= form_tag search_path(current_user.id), method: "get" do %>
-            <%= text_field_tag :search, params[:search] %>
+        <%= form_tag search_path, method: "get" do %>
+            <%= text_field_tag :searches, params[:searches] %>
             <%= submit_tag (I18n.t :search), :name => nil %>
         <% end %>
       </li>
