--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,4 +1,4 @@
 <% @results.each do |result| %>
   <%= link_to result.header, result.link %>
-  <%= result.text %>
+  <%= result.text %><br>
 <% end %>
