--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,17 +29,15 @@ body {
   border-radius: 0;
 }
 
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {
-  margin-bottom: 0px;
-}
+
+
 
 /* Set gray background color and 100% height */
 .sidenav {
-  padding-top: 20px;
+  //padding-top: 20px;
   background-color: #f1f1f1;
-  height: 100%;
-  margin-bottom: 0px;
+  //height: 100%;
+  //margin-bottom: 0px;
 }
 
 /* Set black background color, white text and some padding */
@@ -58,24 +56,17 @@ footer {
     height: 100%;
     padding: 15px;
   }
-  .row.content {height:100%;}
+  .row.content {height:1auto;}
 }
 
-.column{
-	width:50%;
-	//margin-right:.5%;
-	min-height:300px;
-	background:#fff;
-	float:left;
-	border:1px dashed #ddd;
+.height-column{
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
+  border:1px dashed #ddd;
 }
-.column-full-width{
-	width:100%;
-	margin-right:.5%;
-	min-height:300px;
-	background:#fff;
-	float:left;
-	border:1px dashed #ddd;
+.height-row {
+  height: auto; 
+  overflow: hidden;
 }
 .dragbox{
 	margin:5px 2px 2px 20px;
@@ -126,3 +117,60 @@ button.close {
   height: 200px;
   overflow-y: auto;
  }
+
+
+.black {
+	background-color: #373a3c;
+	a {
+		color: #ffffff !important;
+	}
+}
+
+.white {
+	background-color: #f7f7f9;
+
+}
+
+.blue {
+	background-color: #e3f2fd;
+	a {
+		color: #696969 !important;
+	}
+}
+
+.col-sm-9, .col-sm-3, .col-sm-6, .col-sm-12 {
+    min-height: 200px;
+    //margin: 0 10px;
+
+}
+
+
+.profile-userpic img {
+  float: none;
+  margin: 0 auto;
+  width: 50%;
+  height: 50%;
+  -webkit-border-radius: 90% !important;
+  -moz-border-radius: 90% !important;
+  border-radius: 90% !important;
+}
+
+.profile-usertitle {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profile-usertitle-name {
+  color: #5a7391;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+
+
+.panel-body{
+	padding:10px 0;
+  min-height: 400px;
+}
+
+
