--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Sites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.black {
+	background-color: #000000 !important;
+}
+
+.white {
+	background-color: #FFFAF0;
+}
+
+.blue {
+	background-color: #00BFFF;
+}
