--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,4 +1,28 @@
+<style type="text/css">
 
+</style>
+<div class="panel panel-default">
+  <div class="panel-heading">
+  	<div class="btn-toolbar">
+  <div class="btn-group">
+      <button class="btn btn-default" id="picture-btn" data-original-title="Drag picture" 
+   data-placement="bottom" rel="popover"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
+	     
+	       	</button>
+      <button class="btn draggable btn-default" id="video-btn"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></button>
+	      	<button class="btn draggable btn-default" id="text-btn"><i class="fa fa-font fa-2x" aria-hidden="true"></i></button>
+	      	<button class="btn btn-default" id="add-page" data-toggle="modal" data-target="#newPageDialog"> <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+</button>
+	      	<button class="btn btn-default" id="save"><i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i></button>
+  </div>
+ 
+</div>
+  </div>
+  <div class="panel-body height-row"><%= render "page" %></div>
+</div>
+
+
+<!-- 
 <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>         
 
 
@@ -24,11 +48,10 @@
 			</div>
   	</div>
   	<div class="col-xs-12 col-md-8">
-  		<%= render "page" %>
-  	</div>
+  		  	</div>
 
 	</div>
-
+ -->
 <div class="modal fade" id="newPageDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -52,7 +75,7 @@
   
   function updateWidgetData(){  
 	  var items=[];  
-	  $("div[class*='column']").each(function(){  
+	  $("div[id^='col']").each(function(){  
 	    var columnId=$(this).attr('id'); 
 	    $('.dragbox', this).each(function(i){
   
