--- a/app/views/template/_horizontal.html.erb
+++ b/app/views/template/_horizontal.html.erb
@@ -1,8 +1,7 @@
-
 <nav class="navbar navbar-default <%= @site.theme %>">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#horNavbar">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#horizontalNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
@@ -10,21 +9,24 @@
        <a class="navbar-brand" href="" style="padding: 0px;"><img  style="height: 100%; padding: 2px; width: auto;" src="<%= @site.picture.url %>">
         <%= @site.title %></a>
     </div>
-    <div class="collapse navbar-collapse" id="horNavbar">
+    <div class="collapse navbar-collapse" id="horizontalNavbar">
       <ul class="nav navbar-nav">
         <% @site.pages.each do |page| %>
-          <li class="<%= @page.id == page.id ? 'active' : ''%>"><%= link_to page.title, edit_site_page_path(@site, page) %> </li>
-       <% end %>
+          <li><%= active_link_to page.title, { controller: "pages", action: action_name, id: page }, :wrap_tag => :li %> </li>
+        <% end %>
       </ul>
+      <% if action_name == "show" %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Back", root_path %> </a></li>        
+        </ul>
+      <% end %> 
     </div>
   </div>
 </nav>
 <div class="container-fluid">
   <div class="row">
-
-  <div class="col-sm-12 height-column">
-     <%= @body.html_safe %>
-
-</div>
-</div>
+    <div class="col-sm-12 height-column">
+      <%= @body.html_safe %>
+    </div>
+  </div>
 </div>
