--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <%= link_to "Website Builder", root_path, class:"navbar-brand" %>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to "Home", root_path %></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li> 
+      <li><%= active_link_to "Home", root_path, :wrap_tag => :li, :active => :exclusive %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li>
-            <%= link_to user_path(current_user.id) do%>
+            <%= active_link_to user_path(current_user.id), :wrap_tag => :li  do%>
               <span class="glyphicon glyphicon-user"></span> My account
             <% end %>
         </li>
@@ -45,7 +43,7 @@
           <li>
             <%= link_to new_user_session_path do %>
               <span class="glyphicon glyphicon-log-in"></span> Login
-              <% end %>
+            <% end %>
           </li>
       <% end %>
     </ul>
@@ -65,11 +63,5 @@
       </div>
   </div>
 </div>
-<!-- 
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
- -->
-
 </body>
 </html>
