--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,3 +1,4 @@
+<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 <style type="text/css">
 
 </style>
@@ -18,12 +19,12 @@
  
 </div>
   </div>
-  <div class="panel-body height-row"><%= render "page" %></div>
+  <div class="panel-body height-row"><%= render "page", locals: {action: "edit"} %></div>
 </div>
 
 
 <!-- 
-<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>         
+       
 
 
 <div class="container">
@@ -77,7 +78,7 @@
 	  var items=[];  
 	  $("div[id^='col']").each(function(){  
 	    var columnId=$(this).attr('id'); 
-	    $('.dragbox', this).each(function(i){
+	    $('.edit-class', this).each(function(i){
   
 	      var item={  
 	        id : $(this).data('id'),   
@@ -147,7 +148,7 @@ $("#save").click(function() {
 });
 
 
-$(".dragbox").hover( 
+$(".edit-class").hover( 
 	function() {
         $(this).find('.close').delay(50).fadeIn(10);
     },
