--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,16 @@
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
       <li><%= active_link_to "Home", root_path, :wrap_tag => :li, :active => :exclusive %></li>
-      <li>
-        <%= form_tag search_path, method: "get" do %>
-            <%= text_field_tag :searches, params[:searches] %>
-            <%= submit_tag "search", :name => nil %>
-        <% end %>
-      </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <li>
+        <%= form_tag search_path, method: "get", class: "navbar-form navbar-left" do %>
+          <div class="form-group">
+            <%= text_field_tag :searches, params[:searches],  class: "form-control", placeholder: "Search" %>
+          </div>
+            <%= submit_tag "Search", :name => nil, class: "btn btn-default" %>
+        <% end %>
+      </li>
       <% if user_signed_in? %>
         <li>
             <%= active_link_to user_path(current_user.id), :wrap_tag => :li  do%>
