Draggable element modified

--- a/app/views/template/_vertical.html.erb
+++ b/app/views/template/_vertical.html.erb
@@ -19,7 +19,7 @@
       </ul>
       <br>
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-9" id="content">
       <%= @body.html_safe %>
     </div>
   </div>
