--- a/app/views/template/_horizontal.html.erb
+++ b/app/views/template/_horizontal.html.erb
@@ -25,7 +25,7 @@
 </nav>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 height-column">
+    <div class="col-sm-12 height-column" id="content">
       <%= @body.html_safe %>
     </div>
   </div>
