--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "jquery-ui";
+@import "editable/bootstrap-editable";
 
 html {
   position: relative;
