--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
 @import "font-awesome";
 @import "jquery-ui";
 @import "editable/bootstrap-editable";
+@import "jqcloud";
 
 html {
   position: relative;
