--- a/app/views/pages/edit.js.erb
+++ b/app/views/pages/edit.js.erb
@@ -1,3 +1,4 @@
 $("div#content").html("<%= escape_javascript(@body.html_safe) %>")
 initializeEditable();
 initializeSortable();
+initializeCloseButon();
