--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,21 +119,45 @@ button.close {
 
 .black {
 	background-color: #373a3c;
-	a {
-		color: #ffffff !important;
+	a, .profile-usertitle-name{
+		color: #cccccc !important;
 	}
+  .active > a, .active > a:hover, .active > a:focus {
+    background-color: #181a1b !important;
+  }
+  a:hover, a:focus {
+    background-color: transparent !important;
+    color: #ffffff !important;
+  }
 }
 
 .white {
 	background-color: #f7f7f9;
+  a, .profile-usertitle-name {
+    color: #777 !important;
+  }
+  .active > a, .active > a:hover, .active > a:focus, a:hover, a:focus {
+    background-color: #f0f0f4 !important;
+  }
+  a:hover, a:focus {
+    background-color: transparent !important;
+    color: #0d0d0d !important;
+  }
 
 }
 
 .blue {
 	background-color: #e3f2fd;
-	a {
+	a, .profile-usertitle-name{
 		color: #696969 !important;
 	}
+  .active > a, .active > a:hover, .active > a:focus, a:hover, a:focus  {
+    background-color: #cfe9fc !important;
+  }
+  a:hover, a:focus {
+    background-color: transparent !important;
+    color: #0d0d0d !important;
+  }
 }
 
 .col-sm-9, .col-sm-3, .col-sm-6, .col-sm-12 {
@@ -144,12 +168,12 @@ button.close {
 
 .profile-userpic img {
   float: none;
-  margin: 0 auto;
+  margin: 10px auto;
   width: 50%;
   height: 50%;
-  -webkit-border-radius: 90% !important;
+ /* -webkit-border-radius: 90% !important;
   -moz-border-radius: 90% !important;
-  border-radius: 90% !important;
+  border-radius: 90% !important;*/
 }
 
 .profile-usertitle {
@@ -158,16 +182,17 @@ button.close {
 }
 
 .profile-usertitle-name {
-  color: #5a7391;
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 7px;
 }
 
 
-.panel-body{
+.editor-panel{
 	padding:10px 0;
   min-height: 400px;
+
 }
+
 
 
