--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Site</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', sites_path %>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<div class="panel panel-default text-left">
+		  <div class="panel-heading">New Site</div>
+		  <div class="panel-body">
+		  	<%= render 'form' %>
+		  </div>
+		</div>
+	</div>
+</div>
