--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -1,40 +1,86 @@
-<table>
+<style type="text/css">
+  .dropdown-actions { 
+    display: none;
+    float:left;
+    padding: 0;
+  }
+  .btn-dropdown{
+    //padding: 0;
+    border: none;
+    background: #e6e6e6;
+
+  }
+</style>
+<% if can? :create, Site %>
+<%= link_to 'New Site', new_site_path, class:"btn btn-default" %>
+<% end %>
+<table class="table table-hover" id="sites-table">
   <thead>
     <tr>
-      <th>Theme</th>
-      <th>Menu type</th>
       <th>Title</th>
-      <th>User Id</th>
-
-      <th colspan="3"></th>
+      <th>Logo</th>
+      <th>User name</th>
     </tr>
   </thead>
 
   <tbody>
     <% @sites.each do |site| %>
       <tr>
-        <td><%= site.theme %></td>
-        <td><%= site.menu_type %></td>
-        <td><%= site.title %></td>
-        <td>----<%= site.user_id %>----</td>
-        <% if can? :read, site %>
-        <td><%= link_to 'Show', site_path(site) %></td>
-        <% end %>
-        <% if can? :read, site.pages.first %>
-        <td><%= link_to 'preview', site_page_path(site, site.first_page) %></td>
-        <% end %>
-        <% if can? :update, site %>
-        <td><%= link_to 'Edit', edit_site_page_path(site, site.first_page) %></td>
-        <% end %>
-        <% if can? :destroy, site %>
-        <td><%= link_to 'Destroy', site_path(site), method: :delete %></td>
-        <% end %>
+
+        
+        <td>
+          <div class="dropdown dropdown-actions">
+            <button class="btn dropdown-toggle btn-dropdown" type="button" data-toggle="dropdown">
+            <i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+            <ul class="dropdown-menu">
+              <li>
+                <% if can? :read, site %>
+                <%= link_to 'Description', site_path(site) %>
+                <% end %>
+              </li>
+              <li>
+                <% if can? :read, site.pages.first %>
+                  <%= link_to 'Show', site_page_path(site, site.first_page) %>
+                <% end %>
+              </li>
+              <li>
+                <% if can? :update, site %>
+                  <%= link_to 'Edit', edit_site_page_path(site, site.first_page) %>
+                <% end %>
+              </li>
+              <li>
+                <% if can? :destroy, site %>
+                  <%= link_to 'Delete', site_path(site), method: :delete %>
+                <% end %>
+              </li>
+            </ul>
+          </div>
+          <p><%= site.title %></p>
+        </td>
+        <td><%= site.picture.to_html("show").html_safe %></td>
+        <td><p><%= site.user.name%></p></td>
+        <td><p><%= site.created_at %></p></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @sites %>
 <br>
-<% if can? :create, Site %>
-<%= link_to 'New Site', new_site_path %>
-<% end %>
+
+
+<script type="text/javascript">
+  $('#sites-table tbody tr').hover(function() {
+      $(this).find(".dropdown").show();
+  }, function() {
+      
+      $(this).find(".btn-dropdown").css("background", "#e6e6e6");
+      $(this).find("div.dropdown").removeClass('open')
+      $(this).find(".dropdown").hide();
+  });
+
+  $('.btn-dropdown').click(function() {
+  $(this).css("background", "#cccccc");
+});
+
+
+</script>
