--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -64,6 +64,13 @@ $(document).ready(function() {
 	   $("#save").click(function() {
 	        updateWidgetData();
    }); 
+
+     $(document).ready(function() {
+  initializeEditable();
+  initializeSortable();
+  initializeCloseButon();
+    
+});
 </script>
 
 
