--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,41 +19,56 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-      <li><%= active_link_to "Home", root_path, :wrap_tag => :li, :active => :exclusive %></li>
+      <li><%= active_link_to t('menu.root'), root_path, :wrap_tag => :li, :active => :exclusive %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
         <%= form_tag search_path, method: "get", class: "navbar-form navbar-left" do %>
           <div class="form-group">
-            <%= text_field_tag :searches, params[:searches],  class: "form-control", placeholder: "Search" %>
+            <%= text_field_tag :searches, params[:searches],  class: "form-control", placeholder: t('menu.search') %>
           </div>
-            <%= submit_tag "Search", :name => nil, class: "btn btn-default" %>
+            <%= submit_tag t('menu.search'), :name => nil, class: "btn btn-default" %>
         <% end %>
       </li>
       <% if user_signed_in? %>
         <li>
-            <%= active_link_to user_path(current_user.id), :wrap_tag => :li  do%>
-              <span class="glyphicon glyphicon-user"></span> My account
+            <%= active_link_to user_path(current_user.id), :wrap_tag => :li  do %>
+              <span class="glyphicon glyphicon-user"></span> <%= t('menu.my_account') %>
             <% end %>
         </li>
 
         <li>
           <%= link_to destroy_user_session_path, :method => :delete do%>
-            <span class="glyphicon glyphicon-log-out"></span> Log out
+            <span class="glyphicon glyphicon-log-out"></span> <%= t('menu.logout') %>
           <% end %>
         </li>
               <% else %>
           <li>
             <%= link_to new_user_registration_path do%>
-              <span class="glyphicon glyphicon-user"></span> Sign Up
+              <span class="glyphicon glyphicon-user"></span> <%= t('menu.sign_up') %>
             <% end %>
           </li>
           <li>
             <%= link_to new_user_session_path do %>
-              <span class="glyphicon glyphicon-log-in"></span> Login
+              <span class="glyphicon glyphicon-log-in"></span>  <%= t('menu.login') %>
             <% end %>
           </li>
       <% end %>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          <%= t('menu.languages.lang') %>
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <%= link_to t('menu.languages.en'), change_locale_path(:en) %>
+          </li>
+          <li>
+            <%= link_to t('menu.languages.ru'), change_locale_path(:ru) %>
+          </li>
+        </ul>
+      </li>
+
     </ul>
   </div>
   </div>
