--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="jqcloud.css" />
+<!-- <link rel="stylesheet" type="text/css" href="jqcloud.css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 <%= javascript_include_tag('jqcloud.js') %>
 
@@ -16,6 +16,6 @@
     // When DOM is ready, select the container element and call the jQCloud method, passing the array of words as the first argument.
     $("#example").jQCloud(word_array, {});
   });
-</script><!-- You should explicitly specify the dimensions of the container element -->
-<div id="example" style="width: 550px; height: 350px; color: black;"></div>
+</script>
+<div id="example" style="width: 550px; height: 350px; color: black;"></div> -->
 <%= render "sites" %>
