--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for([site, site.comments.new], :html=>{class: "form-inline"}) do |f| %>
   <div class="form-group">    
-    <%= f.text_field :content,  class: "form-control", placeholder: "Your comments" %>
+    <%= f.text_field :content,  class: "form-control", placeholder: t('comments.your_comment') %>
   </div>
   <div class="form-group">
-    <%= f.submit "Add", class:"btn btn-default"%>
+    <%= f.submit I18n.t('comments.add'), class:"btn btn-default"%>
   </div>
 <% end %>
