--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,11 +1,9 @@
-<!-- <link rel="stylesheet" type="text/css" href="jqcloud.css" />
+<link rel="stylesheet" type="text/css" href="jqcloud.css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 <%= javascript_include_tag('jqcloud.js') %>
 
 <script type="text/javascript">
-  /*!
-   * Create an array of word objects, each representing a word in the cloud
-   */
+
   var word_array = [
     <% Site.tag_counts_on(:hashtags).each do |hashtag| %>
     {text: "<%= hashtag.name %>", weight: <%= hashtag.taggings_count %>, link: "<%= search_path(:tag => hashtag.name) %>" },
@@ -17,5 +15,5 @@
     $("#example").jQCloud(word_array, {});
   });
 </script>
-<div id="example" style="width: 550px; height: 350px; color: black;"></div> -->
+<div id="example" style="width: 550px; height: 350px; color: black;"></div>
 <%= render "sites" %>
